criando configuraçoes gerais

--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -23,7 +23,7 @@
 </div>
 
 <div class="content mt-3">
-
+{{>_msg}}
     <div class="col-sm-12">
         <div class="alert  alert-success alert-dismissible fade show" role="alert">
             <span class="badge badge-pill badge-success">Bom Serviço! </span> Não se esqueça de abrir sua loja.
