--- a/src/views/menu/editar.hbs
+++ b/src/views/menu/editar.hbs
@@ -3,6 +3,7 @@
         <div class="card-body">
             <h5 class="text-center">Pagina para Editar</h5>
             <hr>
+            {{>_msg}}
             <form action="/menu/editando" method="post">
                 <div class="row col-12">
                     <div class="form-group col-12">
