--- a/src/views/menu/views.hbs
+++ b/src/views/menu/views.hbs
@@ -3,6 +3,7 @@
         <div class="card-body">
             <div class="h2">Vizualização de Cardápios Cadastrados</div>
             <hr>
+            {{>_msg}}
             <form action="/menu/views" method="post">
                 <div class="row col-12">
                     <div class="form-group col-12">
