--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -27,9 +27,9 @@
                 </li> 
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="true"> <i class="menu-icon fa fa-laptop"></i>Dados Empresa</a>
+                        aria-expanded="true"> <i class="menu-icon fa fa-area-chart"></i>Dados Empresa</a>
                     <ul class="sub-menu children dropdown-menu">                                              
-                        <li><i class="fa fa-money"></i><a href="/dados/lucros">Graficos da Empresa</a></li>                                                                                                    
+                        <li><i class="menu-icon fa fa-area-chart"></i><a href="/dados/lucros">Graficos da Empresa</a></li>                                                                                                    
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
@@ -40,11 +40,12 @@
                         <li><i class="fa fa-table"></i><a href="/clients/1">Visualizar Clientes</a></li>
                     </ul>
                 </li>                
-                <h3 class="menu-title">Icons</h3><!-- /.menu-title -->
+                <h3 class="menu-title">CONFIGURAÇÕES</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown ">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-cogs"></i>Configurações</a>
                     <ul class="sub-menu children dropdown-menu">                        
+                        <li><i class="menu-icon fa fa-gear"></i><a href="/config">Configurações Gerais</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/menu/register">Cadastrar Menu</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/config/delivery">Configurar Delivery</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Thema</a></li>
