--- a/src/views/config/config.hbs
+++ b/src/views/config/config.hbs
@@ -1,11 +1,15 @@
-<div class="container">
+{{>_msg}}
+
+{{>_configClassMenu}}
+<div class="container" id="config">
     <div class="card">
         <div class="card-body">
             <h5>Configurações Gerais</h5>
             <hr>
             <div class="row col-12 mt-3 ml-3">
                 <div class="form-group col-6">
-                    <h6 class="text-left">Configurações de Bairro <small><br>(Caso ative você deverá configurar os Bairros
+                    <h6 class="text-left">Configurações de Bairro <small><br>(Caso ative você deverá configurar os
+                            Bairros
                             Para Entrega)</small></h6>
                     <div class="col-sm-12">
                         <div class="page-header float-left">
@@ -13,8 +17,7 @@
                                 <ol class="breadcrumb text-right">
                                     <p>Desativar/Ativar &nbsp;&nbsp;</p>
                                     <label class="switch">
-                                        <input type="checkbox" id="checkbox" data-toggle="modal"
-                                            style="color: black;">
+                                        <input type="checkbox" id="checkbox" data-toggle="modal" style="color: black;">
                                         <span class="slider round"></span>
                                     </label>
                                 </ol>
@@ -23,7 +26,8 @@
                     </div>
                 </div>
                 <div class="form-group col-6">
-                    <h6 class="text-left">Configurações Descrições Produto <small><br>(Caso ative você deverá configurar os Bairros
+                    <h6 class="text-left">Configurações Descrições Produto <small><br>(Caso ative você deverá configurar
+                            os Bairros
                             Para Entrega)</small></h6>
                     <div class="col-sm-12">
                         <div class="page-header float-left">
@@ -31,8 +35,7 @@
                                 <ol class="breadcrumb text-right">
                                     <p>Desativar/Ativar &nbsp;&nbsp;</p>
                                     <label class="switch">
-                                        <input type="checkbox" id="checkbox" data-toggle="modal" 
-                                            style="color: black;">
+                                        <input type="checkbox" id="checkbox" data-toggle="modal" style="color: black;">
                                         <span class="slider round"></span>
                                     </label>
                                 </ol>
@@ -42,8 +45,24 @@
                 </div>
             </div>
             <hr>
-            <div class="row col-12">
-                
+            <div class="row">
+                <div class="form-group col-6 ml-5 mt-3">
+                    <h6 class="text-left">Configurações Classes de Cardápios <small><br>(Ative para separar seus
+                            produtos em classes Ex:bebidas,hamburgues,pizzas, etc)</small></h6>
+                    <div class="col-sm-12">
+                        <div class="page-header float-left">
+                            <div class="page-title">
+                                <ol class="breadcrumb text-right">
+                                    <p>Desativar/Ativar &nbsp;&nbsp;</p>
+                                    <label class="switch">
+                                        <input type="checkbox" id="confiClass" data-toggle="modal" style="color: black;"  >
+                                        <span class="slider round"></span>
+                                    </label>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
