--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -21,6 +21,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/buttonOnOff.css">
     <link rel="stylesheet" href="/css/popup.css">
+    <link rel="stylesheet" href="/css/config.css">
 
 </head>
 
@@ -77,7 +78,7 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
    <script type="text/javascript" src="/js/lucros.js"></script>
    <script type="text/javascript" src="/js/maisVendidos.js"></script>
-    
+    <script src="/js/configClass.js"></script>
 </body>
 
 </html>
