--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -41,15 +41,14 @@
                      <h6 class="text-center mt-2" id="clientCarrinho"></h6>
                      <hr>
                     <div class="row">
-                        <div class="form-group ml-2">
-                            <p class="text-center ml-5">1x <strong>X-Tudo</strong> 18R$</p>
+                        <div class="form-group ml-2" id="itensNoCarrinho">
                         </div>
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="form-group col-12">
+                        <div class="form-group col-12" id="totalTaxaSub">
                             <p>SubTotal: </p>
-                            <p>Taixa de Entrega</p>
+                            <p>Taxa de Entrega:</p>
                             <p>Total: </p>
                         </div>
                     </div>
