--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -57,8 +57,8 @@
                         Cliente
                     </button>
                     <form action="" method="post">
-                        <button class="btn btn-danger col-12 mt-2 " data-toggle="modal"
-                            data-target="#MeuModal">Finalizar Pedido</button>
+                        <button class="btn btn-danger col-12 mt-2 " 
+                             id="finalizarPedidoCashier">Finalizar Pedido</button>
                     </form>
                 </div>
             </div>
