--- a/src/views/config/config.hbs
+++ b/src/views/config/config.hbs
@@ -17,7 +17,7 @@
                                 <ol class="breadcrumb text-right">
                                     <p>Desativar/Ativar &nbsp;&nbsp;</p>
                                     <label class="switch">
-                                        <input type="checkbox" id="checkbox" data-toggle="modal" style="color: black;">
+                                        <input type="checkbox" id="configBairro" data-toggle="modal" style="color: black;">
                                         <span class="slider round"></span>
                                     </label>
                                 </ol>
@@ -27,15 +27,15 @@
                 </div>
                 <div class="form-group col-6">
                     <h6 class="text-left">Configurações Descrições Produto <small><br>(Caso ative você deverá configurar
-                            os Bairros
-                            Para Entrega)</small></h6>
+                            os as
+                            descrições dos produtos)</small></h6>
                     <div class="col-sm-12">
                         <div class="page-header float-left">
                             <div class="page-title">
                                 <ol class="breadcrumb text-right">
                                     <p>Desativar/Ativar &nbsp;&nbsp;</p>
                                     <label class="switch">
-                                        <input type="checkbox" id="checkbox" data-toggle="modal" style="color: black;">
+                                        <input type="checkbox" id="descricaoProduto" data-toggle="modal" style="color: black;">
                                         <span class="slider round"></span>
                                     </label>
                                 </ol>
