--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,7 +10,6 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="apple-icon.png">
     <link rel="shortcut icon" href="favicon.ico">
-
     <link rel="stylesheet" href="/vendors/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/vendors/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/vendors/themify-icons/css/themify-icons.css">
@@ -32,6 +31,7 @@
         {{>_nav}}
         {{{body}}}
     </div>
+     <script src="/js/varglobalIp.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -75,6 +75,7 @@
 
     <script src="/scripts/carregaCliente.js"></script>
     <script src="/js/saudacoes.js"></script>
+    <script src="/js/statusConfig.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
    <script type="text/javascript" src="/js/lucros.js"></script>
    <script type="text/javascript" src="/js/maisVendidos.js"></script>
