--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -55,7 +55,7 @@
         <div class="card text-white bg-flat-color-2">
             <div class="card-body pb-0 text-center">
                 <h4 class="mb-0">
-                    <span class="count">{{countPreparo}}</span>
+                    <span class="count" id="countPreparoI">{{countPreparo}}</span>
                 </h4>
                 <p class="text-light">Preparo</p>
 
