arrumando layout montar pedido

--- a/src/public/css/config.css
+++ b/src/public/css/config.css
@@ -13,3 +13,11 @@
 #cashierTypeDelivery ul li {
     display: inline;
 }
+
+
+/* .card-body,
+body,
+#fundo {
+    color: white;
+    background-color: rgb(46, 46, 46);
+} */
