--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -66,19 +66,19 @@
     </div>
 </div> --}}
 
-<div class="dashboard-wrapper">
-    <div class="container-fluid  dashboard-content">
+<div class="dashboard-wrapper " id="fundo">
+    <div class="container-fluid  dashboard-content" id="fundo">
         <!-- ============================================================== -->
         <!-- pageheader -->
         <!-- ============================================================== -->
-        <div class="row">
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                <div class="page-header">
+        <div class="row" id="fundo">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12" id="fundo">
+                <div class="page-header" id="fundo">
                     <h2 class="pageheader-title">Montar Pedidos</h2>
                     <p class="pageheader-text mt-2">Monte seu pedido de uma forma prática e rápida</p>
-                    <div class="page-breadcrumb">
-                        <nav aria-label="breadcrumb">
-                            <ol class="breadcrumb">
+                    <div class="page-breadcrumb" id="fundo">
+                        <nav aria-label="breadcrumb" id="fundo">
+                            <ol class="breadcrumb" id="fundo">
                                 <li class="breadcrumb-item"><a href="/" class="breadcrumb-link">Dashboard</a></li>
                                 <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Montar Pedido</a></li>
                             </ol>
@@ -100,7 +100,7 @@
                                 <div class="row">
                                     <div class="form-group col-8">
                                         <label for="">Selecione uma classe do Cardápios</label>
-                                        <select name="" id="selectClassCardapio" class="form-control">
+                                        <select name="" id="selectClassCardapio" class="form-control" id="fundo">
                                             <option value="">Selecione uma classe</option>
                                             {{#each cardapios}}
                                             <option value="{{class}}">{{maiuscula class}}</option>
@@ -166,7 +166,7 @@
                                             <div class="mt-5" id="totalTaxaSub">
                                                 <h4 class="aling-left">SubTotal: </h4>
                                                 <h4 class="aling-left">Taxa de Entrega:</h4>
-                                                <h3 class="aling-left">Total: R$100,00</h3>
+                                                <h3 class="aling-left">Total: </h3>
                                             </div>
                                             <hr>
                                         </div>
