--- a/src/views/config/config.hbs
+++ b/src/views/config/config.hbs
@@ -81,7 +81,35 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-group col-4 ml-2 mt-3">
+                    <h6 class="text-left">Configurações numeros máximo de compra <small><br>(Ative que clientes não venham conseguir pedir comprar mais que o limite que você tem para produzir)</small></h6>
+                    <form action="/config/maxPedidos" method="post">
+                        <div class="col-sm-12 ml-3">
+                            <div class="row mt-3">
+                                <input type="number" name="" id="" class="form-control col-7" value="">
+                                <button class="btn btn-outline-dark col-3 ml-2" style="border-radius: 5px;">Salvar</button>
+                            </div>
+                    </form>
+                    {{!-- <div class="page-header float-left">
+                            <div class="page-title">
+                                <ol class="breadcrumb text-right">
+                                    <p>Desativar/Ativar &nbsp;&nbsp;</p>
+                                    <label class="switch">
+                                        {{#if (valorTrue this.classMenu)}}
+                                        <input type="checkbox" id="confiClass" checked data-toggle="modal"
+                                            style="color: black;">
+                                        {{else}}
+                                        <input type="checkbox" id="confiClass" data-toggle="modal"
+                                            style="color: black;">
+                                        {{/if}}
+                                        <span class="slider round"></span>
+                                    </label>
+                                </ol>
+                            </div>
+                        </div> --}}
+                </div>
             </div>
         </div>
     </div>
+</div>
 </div>
