--- a/src/views/menu/register.hbs
+++ b/src/views/menu/register.hbs
@@ -10,7 +10,7 @@
                         <select name="class" id="class" class="form-control">
                             <option value="promocoes">Selecione uma Classe</option>
                             {{#each class}}
-                            <option value="lanches">{{classMenu}}</option>
+                            <option value={{classMenu}}>{{classMenu}}</option>
                             {{/each}}                            
                         </select>
                     </div>
