--- a/src/views/partials/_nav.hbs
+++ b/src/views/partials/_nav.hbs
@@ -23,7 +23,7 @@
         <div class="col-sm-5">
             <div class="user-area dropdown float-right">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img class="user-avatar rounded-circle" src="/images/admin.jpg" alt="User Avatar" id="perfil">
+                    <img class="user-avatar rounded-circle" src="/images/avatar/anonimus.png" alt="User Avatar" id="perfil">
                 </a>
 
                 <div class="user-menu dropdown-menu">
