--- a/src/views/profile/myProfile.hbs
+++ b/src/views/profile/myProfile.hbs
@@ -1,42 +1,45 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
-            <h3 class="card-text">Perfil</h3>
-            <hr>
             <div class="row">
-                <div class="form-group col-12">
-                    <label for="nameLanchonete">Nome da Lanchonete</label>
-                    <input type="text" name="nameLanchonete" id="nameLanchonete" class="form-control"
-                        placeholder="Digite o nome da Loja">
+                <div class="col-sm-4">
+                    <img src="/images/avatar/anonimus.png" alt="Fotom Perfil" class="ml-5" style="border-radius:50%;">
+                    <div class="custom-file mt-3 ml-5 col-8" style="margin-left: 5%;">
+                        <input type="file" class="custom-file-input ml-5" id="inputGroupFile01"
+                            aria-describedby="inputGroupFileAddon01" placeholder="">
+                        <label class="custom-file-label" for="inputGroupFile01">Imagem</label>
+                    </div>
                 </div>
-                <div class="form-group col-12">
-                    <label for="nameUser">Informe o nome do Usuario</label>
-                    <input type="text" name="nameUser" id="nameUser" class="form-control" placeholder="Digite seu nome">
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-12">
-                    <label for="email">E-mail</label>
-                    <input type="text" name="email" id="email" class="form-control" placeholder="Digite seu E-mail">
-                </div>
-                <div class="form-group col-12">
-                    <label for="">Upload da Logo</label>
-                    <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
+                <div class="col-sm mt-4">
+                <hr>
+                    <h3 class="card-text">Perfil</h3>
+                    <hr>
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <label for="nameLanchonete">Nome da Lanchonete</label>
+                            <input type="text" name="nameLanchonete" id="nameLanchonete" class="form-control"
+                                placeholder="Digite o nome da Loja">
                         </div>
-                        <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="inputGroupFile01"
-                                aria-describedby="inputGroupFileAddon01">
-                            <label class="custom-file-label" for="inputGroupFile01">Carregue sua Imagem aqui</label>
+                        <div class="form-group col-6">
+                            <label for="nameUser">Informe o nome do Usuario</label>
+                            <input type="text" name="nameUser" id="nameUser" class="form-control"
+                                placeholder="Digite seu nome">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-12">
+                            <label for="email">E-mail</label>
+                            <input type="text" name="email" id="email" class="form-control"
+                                placeholder="Digite seu E-mail">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-12">
+                            <button class="btn btn-dark col-12">Enviar</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="form-group col-12">
-                    <button class="btn btn-outline-success col-12">Enviar</button>
-                </div>
-            </div>
         </div>
     </div>
+</div>
