--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -152,16 +152,16 @@
                                                 </li>
                                                 <li>
                                                     <label for="" class="ml-3">Retirar no Local</label>
-                                                    <input type="radio" id="classEntrega" name="classEntrega">
+                                                    <input type="radio" id="classRetirarNoLocal" name="classEntrega">
                                                 </li>
                                             </ul>
                                         </div>
                                         <div class="form-group">
                                             <label for="">Tipo de Pagamento</label>
-                                            <select name="" id="" class="form-control">
+                                            <select name="" id="sTipoDePagamento" class="form-control">
                                                 <option value="">Tipo pagamento</option>
-                                                <option value="">Dinheiro</option>
-                                                <option value="">Cartão</option>
+                                                <option value="Dinheiro">Dinheiro</option>
+                                                <option value="Cartão">Cartão</option>
                                             </select>
                                             <div class="mt-5" id="totalTaxaSub">
                                                 <h4 class="aling-left">SubTotal: </h4>
@@ -174,7 +174,7 @@
                                             data-target="#MeuModal">
                                             Cliente
                                         </button>
-                                        <button class="btn btn-danger col-12 mt-2">Finalizar</button>
+                                        <button class="btn btn-danger col-12 mt-2" id="finalizarPedidoCashier" >Finalizar</button>
                                         <br>
                                     </div>
                                 </div>
