--- a/src/views/config/config.hbs
+++ b/src/views/config/config.hbs
@@ -86,7 +86,7 @@
                     <form action="/config/maxPedidos" method="post">
                         <div class="col-sm-12 ml-3">
                             <div class="row mt-3">
-                                <input type="number" name="" id="" class="form-control col-7" value="">
+                                <input type="number" min="1" name="maxCompra"  class="form-control col-7" value="{{this.maxCompra}}">
                                 <button class="btn btn-outline-dark col-3 ml-2" style="border-radius: 5px;">Salvar</button>
                             </div>
                     </form>
