--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/css/buttonOnOff.css">
     <link rel="stylesheet" href="/css/popup.css">
     <link rel="stylesheet" href="/css/config.css">
+    <link rel="stylesheet" href="/css/CLIENTES.css">
 
 </head>
 
