--- a/src/views/profile/myProfile.hbs
+++ b/src/views/profile/myProfile.hbs
@@ -1,43 +1,54 @@
+{{>_modalProfile}}
 <div class="container">
     <div class="card">
         <div class="card-body">
             <div class="row">
-                <div class="col-sm-4">
-                    <img src="/images/avatar/anonimus.png" alt="Fotom Perfil" class="ml-5" style="border-radius:50%;">
-                    <div class="custom-file mt-3 ml-5 col-8" style="margin-left: 5%;">
-                        <input type="file" class="custom-file-input ml-5" id="inputGroupFile01"
-                            aria-describedby="inputGroupFileAddon01" placeholder="">
-                        <label class="custom-file-label" for="inputGroupFile01">Imagem</label>
-                    </div>
+                <div class="col-sm-4 mt-5">
+                    <form action="/profile/upload" method="post" enctype="multipart/form-data">
+                        <a data-target="#imgProfile" href="">
+                            <img src="/images/avatar/profile.png" alt="Fotom Perfil" class="ml-5"
+                                style="border-radius:50%;">
+                        </a>
+                        <div class="form-group col-4 ml-4" >
+                            <button type="button" data-toggle="modal" data-target="#imgProfile" class="btn btn-outline-dark mt-3 ml-5" style="border-radius: 5px;">Carregar  Imagem</button>
+                        </div>
+                    </form>
                 </div>
                 <div class="col-sm mt-4">
-                <hr>
+                    <hr>
                     <h3 class="card-text">Perfil</h3>
                     <hr>
-                    <div class="row">
-                        <div class="form-group col-6">
-                            <label for="nameLanchonete">Nome da Lanchonete</label>
-                            <input type="text" name="nameLanchonete" id="nameLanchonete" class="form-control"
-                                placeholder="Digite o nome da Loja">
+                    <form action="/profile" method="post">
+                        <div class="row">
+                            <div class="form-group col-6">
+                                <label for="nameLanchonete">Nome da Lanchonete</label>
+                                <input type="text" name="company" id="company" class="form-control"
+                                    placeholder="Digite o nome da Loja">
+                            </div>
+                            <div class="form-group col-6">
+                                <label for="nameUser">Informe o nome do Usuario</label>
+                                <input type="text" name="nameUser" id="nameUser" class="form-control"
+                                    placeholder="Digite seu nome">
+                            </div>
                         </div>
-                        <div class="form-group col-6">
-                            <label for="nameUser">Informe o nome do Usuario</label>
-                            <input type="text" name="nameUser" id="nameUser" class="form-control"
-                                placeholder="Digite seu nome">
+                        <div class="row">
+                            <div class="form-group col-6">
+                                <label for="telephone">Telefone</label>
+                                <input type="text" name="telephone" id="telephone" class="form-control"
+                                    placeholder="Digite seu E-mail">
+                            </div>
+                            <div class="form-group col-6">
+                                <label for="email">E-mail</label>
+                                <input type="text" name="email" id="email" class="form-control"
+                                    placeholder="Digite seu E-mail">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-12">
-                            <label for="email">E-mail</label>
-                            <input type="text" name="email" id="email" class="form-control"
-                                placeholder="Digite seu E-mail">
+                        <div class="row">
+                            <div class="form-group col-12">
+                                <button class="btn btn-dark col-12">Enviar</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-12">
-                            <button class="btn btn-dark col-12">Enviar</button>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
