criando graficos front-end

--- a/src/views/dados/lucros.hbs
+++ b/src/views/dados/lucros.hbs
@@ -1,30 +1,87 @@
 <div class="container">
-    <div class="card">
+    <div class="card" id="tela">
         <div class="card-body">
-            <h5>Margem de Lucro</h5>
-            <button onclick="showJSON()" class="btn btn-success mt-2">Atualiza</button>
-            <hr>
-            <div class="row col-12" style="height: 400px;">
-                <div class="form-group" style="height: 400px; width:100%">
-                    <div id="chart_div" style="height: 400px; width:100%"></div>
+            <h5>Itens Mais Vendidos</h5>
+            <div class="row">
+                <div class="form-group col-6">
+                    <div class="borda">
+                        <ul>
+                            <li>
+                                <div class="row">
+                                    <p>X-Tudo</p>
+                                    <div id="graficosUm"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <p>X-Bacon</p>
+                                    <div id="graficosDois"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <p>Coca-Cola</p>
+                                    <div id="graficosTres"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <p>Pizza Calabresa</p>
+                                    <div id="graficosQuatro"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <p>mantiqueira</p>
+                                    <div id="graficosCinco"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <p>Pizza Portuguesa</p>
+                                    <div id="graficosSeis" style="width: 60%;"></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <p>Salgadinho</p>
+                                    <div id="graficosSete"></div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="form-group col-6">
+                    <div class="bordaTow">
+                        <ul>
+                            <li>
+                                <div id="grafUm">
+                                    Gasto
+                                    <div id="grafUmBranco">
+                                        <p>50%</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div id="grafDois">
+                                    Lucro
+                                    <div id="grafDoisBranco">
+                                        <p>100%</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div id="grafTres">
+                                    Total
+                                    <div id="grafTresBranco">
+                                        <p>150%</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<div class="container">
-    <div class="card">
-        <div class="card-body">
-            <h5>Margem de Lucro</h5>
-            <hr>
-            <div class="row col-12" >
-                <div class="form-group" >
-                   <div id="donutchart" style="width: 900px; height: 500px;"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-    
