--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="/css/popup.css">
     <link rel="stylesheet" href="/css/config.css">
     <link rel="stylesheet" href="/css/CLIENTES.css">
-
+    <link rel="stylesheet" href="/css/graficos.css">
 </head>
 
 <body>
@@ -77,10 +77,9 @@
     <script src="/scripts/carregaCliente.js"></script>
     <script src="/js/saudacoes.js"></script>
     <script src="/js/statusConfig.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-   <script type="text/javascript" src="/js/lucros.js"></script>
-   <script type="text/javascript" src="/js/maisVendidos.js"></script>
     <script src="/js/configClass.js"></script>
+
+    
 </body>
 
 </html>
