--- a/src/views/menu/register.hbs
+++ b/src/views/menu/register.hbs
@@ -17,24 +17,24 @@
                 </div>
                 <div class="row col-12">
                     <div class="form-group col-12">
-                        <label for="">Nome</label>
-                        <input type="text" name="name" id="name" class="form-control">
+                        <label for="">Produto</label>
+                        <input type="text" name="name" maxlength="40" id="name" class="form-control">
                     </div>
                 </div>
                 <div class="row col-12">
                     <div class="form-group col-12">
                         <label for="">Descrição</label>
-                        <textarea name="desc" id="desc" cols="30" rows="10" class="form-control"></textarea>
+                        <textarea name="desc" id="desc" cols="30" rows="1" maxlength="110" style="resize: none;" class="form-control"></textarea>
                     </div>
                 </div>
                 <div class="row col-12">
                     <div class="form-group col-6">
                         <label for="">Gasto Material</label>
-                        <input type="text" name="costProduce" id="costProduce" class="form-control">
+                        <input type="number" max="999" name="costProduce" id="costProduce" class="form-control">
                     </div>
                     <div class="form-group col-6">
                         <label for="">Valor Venda</label>
-                        <input type="text" name="value" id="value" class="form-control">
+                        <input type="number" max="999" name="value" id="value" class="form-control">
                     </div>
                 </div>
                 <div class="row col-12 mt-2">
