--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -48,18 +48,13 @@
                         <li><i class="menu-icon fa fa-gear"></i><a href="/config">Configurações Gerais</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/menu/register">Cadastrar Menu</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/config/delivery">Configurar Delivery</a></li>
-                        <li><i class="menu-icon fa fa-gear"></i><a href="">Configurar Thema</a></li>
                     </ul>
-                </li>                
-                <li>
-                    <a href="widgets.html"> <i class="menu-icon ti-email"></i>Widgets </a>
-                </li>                
+                </li>                              
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-area-chart"></i>Marketing</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-map-o"></i><a href="maps-gmap.html">Google Maps</a></li>
-                        <li><i class="menu-icon fa fa-street-view"></i><a href="maps-vector.html">Vector Maps</a></li>
+                        <li><i class="menu-icon fa fa-map-o"></i><a href="/">Enviar Propaganda</a></li>
                     </ul>
                 </li>
                 <h3 class="menu-title">Extras</h3><!-- /.menu-title -->
