--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -78,8 +78,8 @@
     <script src="/js/saudacoes.js"></script>
     <script src="/js/statusConfig.js"></script>
     <script src="/js/configClass.js"></script>
+    <script src="/js/imprimir.js"></script>
 
-    
 </body>
 
 </html>
