--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -104,7 +104,7 @@
             <div class="card text-white bg-flat-color-2">
                 <div class="card-body pb-0 text-center">
                     <h4 class="mb-0">
-                        <span class="count">Anotações</span>
+                        <span class="count" id="imprimir">Anotações</span>
                     </h4>
                     <p class="text-light">Digite sua anotações</p>
 
@@ -136,7 +136,7 @@
                     <div class="col-sm-8 hidden-sm-down">
 
                         <button type="button" class="btn btn-primary float-right bg-flat-color-1 ml-3"><i
-                                class="fa fa-print"></i></button>
+                               title="Imprimir" class="fa fa-print" onclick="imprimir()"></i></button>
 
                         <button type="button" onclick="mandaMensagem('{{this.telephone}}','Cancelado')"
                             title="Cancelar Pedido" class="btn btn-danger float-right"><i
@@ -175,7 +175,7 @@
                             <h6 class=""><strong>Pedido: </strong> #</h6>
                         </div>
 
-                        <div class="form-group col-8">
+                        <div class="form-group col-8" >
                             <h6 class=""><strong>Nome: </strong> {{this.nome}}
                                 &nbsp;&nbsp;&nbsp;<strong>Telefone:
                                 </strong> {{trataTelephone this.telephone}}</h6>
